--- a/jenax-server-parent/jenax-server-core/frontend/src/view/resource.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/view/resource.html
@@ -24,6 +24,7 @@
   <script src="_/js2/bnodes.js?g0"></script>
   <script src="_/js2/render-ld.js?g0"></script>
   <script src="_/js2/map2.js?g0"></script>
+  <script src="_/js2/startpage.js?g0"></script>
   <script src="_/js2/iframe-auth.js?g0"></script>
   <script src="_/js2/load.js?g0"></script>
 
@@ -43,6 +44,7 @@
     <div class="col-xs-12">
       <div id="title"></div>
       <div id="subtitle"></div>
+      <div id="startpage"></div>
       <div id="graph">Loading...</div>
 <noscript>
   <p>
