--- a/jenax-server-parent/jenax-server-core/frontend/src/style.css
+++ b/jenax-server-parent/jenax-server-core/frontend/src/style.css
@@ -93,13 +93,14 @@ ul.horizontal-list {
   list-style-type: none; 
   margin: 0; 
   padding: 0; 
-  display: flex;
-  flex-direction: row;
+  /* display: flex; */
+  /* flex-direction: row; */
   justify-content: space-around;
 } 
   
 ul.horizontal-list li { 
   margin-right: 10px; 
+  display: inline-block;
 } 
 
 footer {
