ldv: sparql and root link

--- a/jenax-server-parent/jenax-server-core/frontend/src/view/resource.html
+++ b/jenax-server-parent/jenax-server-core/frontend/src/view/resource.html
@@ -33,7 +33,7 @@
 
 <nav class="navbar navbar-default">
   <div class="container">
-    <div class="navbar-header"><a class="navbar-brand"><img class="ldv-logo-top" src='_/img/logo.svg'> Linked Data Viewer</a>
+    <div class="navbar-header"><a class="navbar-brand" href="/"><img class="ldv-logo-top" src='_/img/logo.svg'> Linked Data Viewer</a>
     </div>
   </div>
 </nav>
@@ -82,7 +82,7 @@
       <ul class="text-right list-unstyled">
         <li id="loadlabels"></li>
         <li id="inferswitch"></li>
-        <li><span id="localswitch"></span><span id="explorelink"></span><span id="configlink"></span></li>
+        <li><span id="localswitch"></span><span id="explorelink"></span><span class="sparqllink"><a href="/sparql" target="_blank">SPARQL</a></span><span id="configlink"></span></li>
       </ul>
     </div>
   </div>
